@@ -1,3 +1,7 @@
+2006-11-27 Kimmo
+ PATCH: [ 1603359 ] Manual: FAQ updates
+  Manual: Faq.xml
+
 2006-11-26 Kimmo
  PATCH: [ 1602658 ] Manual: note about some 7-zip MSI installers missing file
   Manual: Install.xml
